add hong_dma_to_device and hong_dma_from_device into tools/Makefile

--- a/XDMA/linux-kernel/tools/Makefile
+++ b/XDMA/linux-kernel/tools/Makefile
@@ -1,11 +1,17 @@
 CC ?= gcc
 
-all: reg_rw dma_to_device dma_from_device performance test_chrdev
+all: reg_rw dma_to_device dma_from_device performance test_chrdev hong_dma_to_device hong_dma_from_device
 
 dma_to_device: dma_to_device.o
 	$(CC) -lrt -o $@ $< -D_FILE_OFFSET_BITS=64 -D_GNU_SOURCE -D_LARGE_FILE_SOURCE
 
 dma_from_device: dma_from_device.o
+	$(CC) -lrt -o $@ $< -D_FILE_OFFSET_BITS=64 -D_GNU_SOURCE -D_LARGE_FILE_SOURCE
+
+hong_dma_to_device: hong_dma_to_device.o
+	$(CC) -lrt -o $@ $< -D_FILE_OFFSET_BITS=64 -D_GNU_SOURCE -D_LARGE_FILE_SOURCE
+
+hong_dma_from_device: hong_dma_from_device.o
 	$(CC) -lrt -o $@ $< -D_FILE_OFFSET_BITS=64 -D_GNU_SOURCE -D_LARGE_FILE_SOURCE
 
 performance: performance.o
